<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SkySiren</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="LocationName" translatable="false">Al Qalyubia Governorate/ Egypt</string>
    <string name="ultra_violet" translatable="false">Ultra Violet</string>
    <string name="visibility" translatable="false">Visibility</string>
    <string name="cloud" translatable="false">Cloud</string>
    <string name="humidity" translatable="false">Humidity</string>
    <string name="pressure" translatable="false">Pressure</string>
    <string name="wind" translatable="false">Wind</string>
    <string name="From" translatable="false">From</string>
    <string name="To" translatable="false">To</string>
    <string name="Alarm" translatable="false">Alarm</string>
    <string name="Notification" translatable="false">Notification</string>
    <string name="Save" translatable="false">Save</string>
    <string name="StartDate" translatable="false">Start Date : </string>
    <string name="EndDate" translatable="false">End Date : </string>
    <string name="Dismiss" translatable="false">Dismiss</string>
    <string name="Location" translatable="false">Location</string>
    <string name="Language" translatable="false">Language</string>
    <string name="WindSpeed" translatable="false">Wind Speed</string>
    <string name="Temperature" translatable="false">Temperature</string>
    <string name="Notifications" translatable="false">Notifications</string>
    <string name="Setting" translatable="false">Setting</string>
    <string name="GPS" translatable="false">GPS</string>
    <string name="MAP" translatable="false">MAP</string>
    <string name="Arabic" translatable="false">Arabic</string>
    <string name="English" translatable="false">English</string>
    <string name="Celsius" translatable="false">Celsius</string>
    <string name="Kelvin" translatable="false">Kelvin</string>
    <string name="Fahrenheit" translatable="false">Fahrenheit</string>
    <string name="Meter_Sec" translatable="false">Meter/Sec</string>
    <string name="Mile_Hour" translatable="false">Mile/Hour</string>
    <string name="Enable" translatable="false">Enable</string>
    <string name="Disable" translatable="false">Disable</string>
    <string name="Favourites" translatable="false">Favourites</string>
    <string name="NoPlacesInFavourites" translatable="false">No Places in Favourites</string>
    <string name="Alerts" translatable="false">Alerts</string>
    <string name="emptyAlert" translatable="false">No Alerts </string>
    <string name="NoAlerts" translatable="false">No Alerts in this location weather is fine</string>
    <string name="initial_setup" translatable="false">initial_setup</string>
    <string name="location" translatable="false">location</string>
    <string name="done" translatable="false">done</string>
    <string name="weather_alert" translatable="false">SkySiren_Alert</string>
    <string name="notifications" translatable="false">notification :</string>
    <string name="save" translatable="false">save</string>
    <string name="to" translatable="false">to</string>
    <string name="from" translatable="false">from</string>
    <string name="are_you_sure" translatable="false">Are you sure you want to delete this location from your favourite list ?</string>
    <string name="permission_required" translatable="false">Permission required!\nPlease  give the permission to display over apps </string>
    <string name="empty_alarm_from" translatable="false">You must select (From) date and time!</string>
    <string name="empty_alarm_to" translatable="false">You must select (To) date and time!</string>
    <string name="permission" translatable="false">Permission</string>
    <string name="ok" translatable="false">OK</string>
    <string name="confirm_yes" translatable="false">Yes</string>
    <string name="delet_title" translatable="false">delete from favourite</string>
    <string name="draw_overlays" translatable="false">Please, Enable Draw Overlays permission.</string>
    <string name="delete_alert_title" translatable="false">delete alert</string>
    <string name="are_you_sure_alert" translatable="false">Are you sure you want to delete this alert from your list ?</string>
    <string name="notification" translatable="false">notification</string>
    <string name="channel_name" translatable="false">notification skySiren</string>
    <string name="date" translatable="false">27/12/2023</string>

</resources>