<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="15dp"
    android:background="@drawable/day_card">

    <TextView
        android:id="@+id/startDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/StartDate"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/startDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/startDateTxt"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="27/12/2023"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/startTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startDateTxt"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"
        android:text="12:30 "
        android:textSize="20sp"
        android:textColor="@color/white"
        />


    <TextView
        android:id="@+id/endDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/startDateTxt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/EndDate"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/endDateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/endDateTxt"
        app:layout_constraintTop_toBottomOf="@id/startDateValue"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="27/12/2023"
        android:textSize="20sp"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/endTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endDateTxt"
        android:layout_marginStart="90dp"
        android:layout_marginTop="5dp"
        android:text="12:30 "
        android:textSize="20sp"
        android:textColor="@color/white"/>



    <ImageView
        android:id="@+id/alertView"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_add_alert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/Dismiss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>